# clump

./: .gitignore  README.md  demo.html  run.sh
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  db_helpers.py  main.py  models.py  schemas.py  storage.py
backend/app/cli/: __init__.py  base.py  claude_adapter.py  codex_adapter.py  gemini_adapter.py  registry.py
backend/app/routers/: __init__.py  analyses.py  cli.py  commands.py  github.py  headless.py  hooks.py  processes.py  schedules.py  sessions.py  settings.py  stats.py  tags.py
backend/app/services/: __init__.py  event_manager.py  github_client.py  headless_analyzer.py  notification_manager.py  scheduler.py  session_manager.py  transcript_parser.py
backend/scripts/: migrate_to_per_repo.py
backend/tests/: conftest.py  test_cli_adapters.py  test_commands_router.py  test_config.py  test_database.py  test_db_helpers.py  test_event_manager.py  test_github_client.py  test_github_router.py  test_headless_analyzer.py  test_headless_router.py  test_hooks_router.py  test_main.py  test_models.py  test_notification_manager.py  test_processes_router.py  test_scheduler.py  test_schedules_router.py  test_schemas.py  test_session_manager.py  test_sessions_router.py  test_settings_router.py  test_stats_router.py  test_storage.py  test_tags_router.py  test_transcript_parser.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.tsbuildinfo  vitest.config.ts
scripts/: add-feature.sh  auto-triage.sh  batch-analyze.sh  discover-features.sh  (+10 more)
(+142 files in other folders)
